--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header.phtml
@@ -5,6 +5,9 @@ declare(strict_types=1);
 use Hyva\Theme\ViewModel\SvgIcons;
 use Satoshi\Theme\ViewModel\Cart\Cart;
 
+/** @var Resizable $resizable */
+/** @var Popup $popup */
+
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
@@ -53,7 +56,17 @@ $cartItemsCount = $cart->getCartItemsQty();
       class="md:flex"
       :class="{'md:drop-shadow-lg': $store.main.isHeaderShadowVisible}"
     >
-      <?= $block->getChildHtml('resizable.menu'); ?>
+      <?=
+        $resizable
+          ->setData([
+            'id' => 'menu-desktop',
+            'initialWidth' => 100,
+            'initialHeight' => 56,
+            'cssClass' => 'resizable--menu md:pointer-events-auto',
+          ])
+          ->setChildTemplate('Magento_Theme::html/header/menu/menu-button.phtml')
+          ->render()
+      ?>
     </div>
 
     <div class="col-start-3 flex items-center justify-center md:hidden">
@@ -71,8 +84,30 @@ $cartItemsCount = $cart->getCartItemsQty();
         class="col-start-5 md:flex md:items-center"
         :class="{ 'md:drop-shadow-lg': $store.main.isHeaderShadowVisible }"
       >
-        <?= $block->getChildHtml('resizable.search'); ?>
-        <?= $block->getChildHtml('resizable.minicart'); ?>
+        <?=
+          $resizable
+            ->setData([
+              'id' => 'search-desktop',
+              'initialWidth' => 56,
+              'initialHeight' => 56,
+              'right' => true,
+              'cssClass' => 'resizable--search max-md:hidden md:pointer-events-auto',
+            ])
+            ->setChildTemplate('Magento_Theme::html/header/search/search-button.phtml')
+            ->render()
+        ?>
+        <?=
+          $resizable
+            ->setData([
+              'id' => 'cart-desktop',
+              'initialWidth' => 56,
+              'initialHeight' => 56,
+              'right' => true,
+              'cssClass' => 'resizable--cart md:pointer-events-auto',
+            ])
+            ->setChildTemplate('Magento_Theme::html/header/cart/minicart-button.phtml')
+            ->render()
+        ?>
       </div>
     </div>
   </div>
@@ -96,5 +131,26 @@ $cartItemsCount = $cart->getCartItemsQty();
   </div>
 </div>
 
-<?= $block->getChildHtml('popup.menu'); ?>
-<?= $block->getChildHtml('popup.cart'); ?>
+<?=
+  $popup
+    ->setData([
+      'id' => 'menu',
+      'isFocused' => true,
+      'isFullScreen' => true,
+      'desktopTarget' => 'menu-desktop',
+    ])
+    ->setChildTemplate('Magento_Theme::html/header/menu/menu.phtml')
+    ->render()
+?>
+
+<?=
+  $popup
+    ->setData([
+      'id' => 'cart',
+      'isFocused' => true,
+      'isFullScreen' => true,
+      'desktopTarget' => 'cart-desktop',
+    ])
+    ->setChildTemplate('Magento_Theme::html/header/cart/minicart-overlay.phtml')
+    ->toHtml()
+?>
