--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -1,18 +1,29 @@
 <?php
+
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
+use Satoshi\Theme\ViewModel\Cart\Cart;
+use Satoshi\Theme\Block\Template;
+
+/** @var ViewModelRegistry $viewModels */
+/** @var Template $block */
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
+
+/** @var Cart $cartItems */
+$cart = $viewModels->require(Cart::class);
+$cartItemsCount = $cart->getCartItemsQty();
 
 $is_cart_page = false;
 ?>
 <template x-if="!$store.main.isMobile">
   <template x-portal="document.getElementById('cart-desktop')">
     <div
-      <?php if(!$is_cart_page): ?>
-        :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
+      <?php if (!$is_cart_page) : ?>
+      :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
       <?php endif; ?>
       x-data="
         {
@@ -28,12 +39,14 @@ $is_cart_page = false;
       <div
         class="flex flex-col gap-5 rounded-md p-5 <?= $is_cart_page ? '' : 'md:w-[--minicart-width]' ?> md:gap-0  md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
       >
-        <div class="sticky top-0 z-10 flex items-center justify-between bg-white md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $is_cart_page ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6' ?>">
+        <div
+          class="sticky top-0 z-10 flex items-center justify-between bg-white md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $is_cart_page ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6' ?>"
+        >
           <h1 class="flex items-center text-lg <?= $is_cart_page ? '' : 'md:text-md' ?>">
-            <?php if (!$is_cart_page): ?>
-              <span class="button__icon mr-4 text-[1.5rem] max-md:hidden">
-                <?= $hyvaicons->renderHtml('cart-empty'); ?>
-              </span>
+            <?php if (!$is_cart_page) : ?>
+            <span class="button__icon mr-4 text-[1.5rem] max-md:hidden">
+              <?= $hyvaicons->renderHtml('cart-empty'); ?>
+            </span>
             <?php endif; ?>
             <?= __('Shopping cart') ?>
           </h1>
@@ -84,27 +97,43 @@ $is_cart_page = false;
             method="post"
             class="contents <?= $is_cart_page ? 'md:flex md:justify-between md:gap-8 md:pt-4' : '' ?>"
           >
-            <?php // TODO: Implement cart items here ?>
+            <?= $template->render('Magento_Theme::html/header/cart/minicart-items.phtml') ?>
             <div class="h-[140px] <?= $is_cart_page ? 'md:hidden' : '' ?>"></div>
 
-            <?php if (!$is_cart_page): ?>
-              <template x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('cart-desktop-fixed')">
+            <?php if (!$is_cart_page) : ?>
+            <template
+              x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('cart-desktop-fixed')"
+            >
+              <div
+                :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
+                class="contents"
+                x-show="!$store.main.isMobile || $store.popup.currentPopup == 'cart'"
+              >
                 <div
-                  :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
-                  class="contents"
-                  x-show="!$store.main.isMobile || $store.popup.currentPopup == 'cart'"
+                  <?php if (!$cartItemsCount) : ?>
+                  style="display: none"
+                  <?php endif; ?>
+                  class="relative overflow-x-clip px-4 md:rounded-b-md max-md:px-3"
+                  x-show="!isCartEmpty"
                 >
-                  <?php // TODO: Implement cart totals here ?>
+                  <?= $template->render('Magento_Theme::html/header/cart/minicart-totals.phtml') ?>
                 </div>
-              </template>
-            <?php else: ?>
-              <?php // TODO: Implement cart totals with styles for cart page here ?>
+              </div>
+            </template>
+            <?php else : ?>
+            <div
+              <?php if (!$cartItemsCount) : ?>
+              style="display: none"
+              <?php endif; ?>
+              class="relative overflow-x-clip px-4 md:rounded-b-md max-md:px-3 max-md:fixed bottom-0 left-0 right-0 md:w-[--minicart-width] md:h-full md:border md:contrast-more:border-secondary-700 md:rounded-sm"
+              x-show="!isCartEmpty"
+            >
+              <?= $template->render('Magento_Theme::html/header/cart/minicart-totals.phtml') ?>
+            </div>
             <?php endif; ?>
           </form>
         </div>
       </div>
     </div>
-
-
-    </template>
+  </template>
 </template>
