--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -12,13 +12,12 @@ use Satoshi\Theme\Block\Template;
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
 
-$is_cart_page = false;
+$isCartPage = $block->getData('isCartPage');
 ?>
 
-<div
-  class="flex flex-col gap-5 overflow-auto md:max-h-[calc(100dvh-255px)] <?= $is_cart_page ? 'flex-1' : 'md:px-4' ?>">
+<div class="flex flex-col gap-5 overflow-auto md:max-h-[calc(100dvh-255px)] <?= $isCartPage ? 'flex-1' : 'md:px-4' ?>">
   <div
-    class="flex flex-col gap-5 md:gap-4 md:pb-3 <?= $is_cart_page ? 'md:grid md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4' : 'md:pt-4' ?>"
+    class="flex flex-col gap-5 md:gap-4 md:pb-3 <?= $isCartPage ? 'md:grid md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4' : 'md:pt-4' ?>"
   >
     <template
       x-for="item in cartItems"
@@ -26,7 +25,7 @@ $is_cart_page = false;
     >
       <div
         :key="item.item_id"
-        class="max-h-80 <?= $is_cart_page ? 'md:max-h-none' : '' ?> transition-all duration-300"
+        class="max-h-80 <?= $isCartPage ? 'md:max-h-none' : '' ?> transition-all duration-300"
         :class="
           {
             'opacity-0 -mt-5 md:-mt-4 max-h-0 overflow-hidden': item.isDeleted,
@@ -43,7 +42,7 @@ $is_cart_page = false;
             }
           "
           :href="item.product_url"
-          class="grid grid-cols-[94px_1fr] content-center gap-5 rounded-md <?= $is_cart_page ? 'md:flex md:flex-col' : '' ?>"
+          class="grid grid-cols-[94px_1fr] content-center gap-5 rounded-md <?= $isCartPage ? 'md:flex md:flex-col' : '' ?>"
         >
           <div class="relative overflow-hidden rounded-md bg-secondary-100">
             <template x-if="item.product_image.src">
@@ -57,13 +56,13 @@ $is_cart_page = false;
             </template>
 
             <div
-              class="absolute bottom-5 left-1/2 hidden max-w-min -translate-x-1/2 items-center gap-3 <?= $is_cart_page ? 'md:flex' : '' ?>"
+              class="absolute bottom-5 left-1/2 hidden max-w-min -translate-x-1/2 items-center gap-3 <?= $isCartPage ? 'md:flex' : '' ?>"
             >
               <?= $template->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
             </div>
           </div>
           <div
-            class="flex min-w-0 flex-col items-stretch justify-center gap-5 text-text-on-fg <?= $is_cart_page ? 'md:gap-0' : '' ?>"
+            class="flex min-w-0 flex-col items-stretch justify-center gap-5 text-text-on-fg <?= $isCartPage ? 'md:gap-0' : '' ?>"
           >
             <div class="w-full">
               <h2 class="text-md">
@@ -97,11 +96,11 @@ $is_cart_page = false;
               </template>
             </div>
             <div class="flex flex-wrap items-center justify-between">
-              <div class="flex max-w-min items-center gap-3 <?= $is_cart_page ? 'md:hidden' : '' ?>">
+              <div class="flex max-w-min items-center gap-3 <?= $isCartPage ? 'md:hidden' : '' ?>">
                 <?= $template->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
               </div>
               <div
-                class="flex flex-col items-center text-md <?= $is_cart_page ? 'md:items-start md:w-full md:mt-3' : '' ?>"
+                class="flex flex-col items-center text-md <?= $isCartPage ? 'md:items-start md:w-full md:mt-3' : '' ?>"
               >
                 <template x-if="false">
                   <div class="contents">
