--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -5,7 +5,6 @@ declare(strict_types=1);
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
 use Satoshi\Theme\ViewModel\Cart\Cart;
-use Satoshi\Theme\Block\Template;
 
 /** @var ViewModelRegistry $viewModels */
 /** @var Template $block */
@@ -17,12 +16,13 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 $cart = $viewModels->require(Cart::class);
 $cartItemsCount = $cart->getCartItemsQty();
 
-$is_cart_page = false;
+// TODO: Get from parent when imported in cart page
+$isCartPage = false;
 ?>
 <template x-if="!$store.main.isMobile">
   <template x-portal="document.getElementById('cart-desktop')">
     <div
-      <?php if (!$is_cart_page) : ?>
+      <?php if (!$isCartPage) : ?>
       :inert="$store.main.isMobile ? $store.popup.currentPopup !== 'cart' : !$store.resizable.isVisible('cart-desktop')"
       <?php endif; ?>
       x-data="
@@ -37,13 +37,13 @@ $is_cart_page = false;
       class="contents"
     >
       <div
-        class="flex flex-col gap-5 rounded-md p-5 <?= $is_cart_page ? '' : 'md:w-[--minicart-width]' ?> md:gap-0  md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
+        class="flex flex-col gap-5 rounded-md p-5 <?= $isCartPage ? '' : 'md:w-[--minicart-width]' ?> md:gap-0  md:px-0 md:py-0 max-md:py-0 [.popup\_\_main_&]:px-2"
       >
         <div
-          class="sticky top-0 z-10 flex items-center justify-between bg-white md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $is_cart_page ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6' ?>"
+          class="sticky top-0 z-10 flex items-center justify-between bg-white md:h-[--initial-height] md:min-h-14 md:rounded-md max-md:pb-4 <?= $isCartPage ? 'md:gap-4 md:flex-row-reverse md:justify-end' : 'md:px-6' ?>"
         >
-          <h1 class="flex items-center text-lg <?= $is_cart_page ? '' : 'md:text-md' ?>">
-            <?php if (!$is_cart_page) : ?>
+          <h1 class="flex items-center text-lg <?= $isCartPage ? '' : 'md:text-md' ?>">
+            <?php if (!$isCartPage) : ?>
             <span class="button__icon mr-4 text-[1.5rem] max-md:hidden">
               <?= $hyvaicons->renderHtml('cart-empty'); ?>
             </span>
@@ -95,12 +95,16 @@ $is_cart_page = false;
             id="CartForm"
             action="{{ routes.cart_url }}"
             method="post"
-            class="contents <?= $is_cart_page ? 'md:flex md:justify-between md:gap-8 md:pt-4' : '' ?>"
+            class="contents <?= $isCartPage ? 'md:flex md:justify-between md:gap-8 md:pt-4' : '' ?>"
           >
-            <?= $template->render('Magento_Theme::html/header/cart/minicart-items.phtml') ?>
-            <div class="h-[140px] <?= $is_cart_page ? 'md:hidden' : '' ?>"></div>
+            <?=
+              $template
+                ->setData(['isCartPage' => $isCartPage])
+                ->render('Magento_Theme::html/header/cart/minicart-items.phtml')
+            ?>
+            <div class="h-[140px] <?= $isCartPage ? 'md:hidden' : '' ?>"></div>
 
-            <?php if (!$is_cart_page) : ?>
+            <?php if (!$isCartPage) : ?>
             <template
               x-portal="$store.main.isMobile ? document.getElementById('popup-fixed-content-portal') : document.getElementById('cart-desktop-fixed')"
             >
@@ -116,7 +120,11 @@ $is_cart_page = false;
                   class="relative overflow-x-clip px-4 md:rounded-b-md max-md:px-3"
                   x-show="!isCartEmpty"
                 >
-                  <?= $template->render('Magento_Theme::html/header/cart/minicart-totals.phtml') ?>
+                  <?=
+                    $template
+                      ->setData(['isCartPage' => $isCartPage])
+                      ->render('Magento_Theme::html/header/cart/minicart-totals.phtml')
+                  ?>
                 </div>
               </div>
             </template>
@@ -128,7 +136,11 @@ $is_cart_page = false;
               class="relative overflow-x-clip px-4 md:rounded-b-md max-md:px-3 max-md:fixed bottom-0 left-0 right-0 md:w-[--minicart-width] md:h-full md:border md:contrast-more:border-secondary-700 md:rounded-sm"
               x-show="!isCartEmpty"
             >
-              <?= $template->render('Magento_Theme::html/header/cart/minicart-totals.phtml') ?>
+              <?=
+                $template
+                  ->setData(['isCartPage' => $isCartPage])
+                  ->render('Magento_Theme::html/header/cart/minicart-totals.phtml')
+              ?>
             </div>
             <?php endif; ?>
           </form>
