--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/item-details-article.phtml
@@ -28,21 +28,7 @@ if (!$isAlpineTemplate) {
   class="z-10 flex h-full w-full flex-col items-stretch justify-start text-start"
   x-data="ProductPage()"
   <?php if (!$isAlpineTemplate) : ?>
-  <?php // TODO: Pass correct product data ?>
-  x-init="
-    // () => {
-    //   $data.setProductPageProps({
-    //     manuallySelectedVariantId: {{ card_product.selected_variant.id | default: 0 }},
-    //     selectedVariantId: {{ card_product.selected_or_first_available_variant.id }},
-    //     selectedOptions: JSON.parse('{{ card_product.selected_or_first_available_variant.options | json | escape }}'),
-    //     productId: {{ card_product.id }},
-    //     productUrl: '{{ card_product.url }}',
-    //     isSyncedWithUrl: false,
-    //     isScrollingToTop: false,
-    //     variantsCount: {{ card_product.variants | size }}
-    //   })
-    // }
-  "
+  <?php // TODO: Create x-init to set correct product data ?>
   <?php endif; ?>
 >
   <?php if (!$isAlpineTemplate) : // this image is needed to avoid blink in preview on desktop as there, the select variant is shown, not featured image ?>
@@ -129,10 +115,10 @@ if (!$isAlpineTemplate) {
       <?= $hyvaicons->renderHtml('cart'); ?>
     </button>
 
-    <?=
-      $template
-        ->setData(['isAlpineTemplate' => true])
-        ->render('Magento_Catalog::product/view/price.phtml')
+    <?= ''
+      // $template
+      //   ->setData(['isAlpineTemplate' => true])
+      //   ->render('Magento_Catalog::product/view/price.phtml')
     ?>
   </div>
 </article>
