--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -15,7 +15,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 $isCartPage = $block->getData('isCartPage');
 ?>
 
-<div class="flex flex-col gap-5 overflow-auto md:max-h-[calc(100dvh-255px)] <?= $isCartPage ? 'flex-1' : 'md:px-4' ?>">
+<div class="flex flex-col gap-5 overflow-auto <?= $isCartPage ? 'flex-1' : 'md:px-4 md:max-h-[calc(100dvh-255px)]' ?>">
   <div
     class="flex flex-col gap-5 md:gap-4 md:pb-3 <?= $isCartPage ? 'md:grid md:grid-cols-2 lg:grid-cols-3 2xl:grid-cols-4' : 'md:pt-4' ?>"
   >
@@ -102,34 +102,7 @@ $isCartPage = $block->getData('isCartPage');
               <div
                 class="flex flex-col items-center text-md <?= $isCartPage ? 'md:items-start md:w-full md:mt-3' : '' ?>"
               >
-                <template x-if="false">
-                  <div class="contents">
-                    <span
-                      class="text-red-700"
-                      x-text="Alpine.store('cart').money(item.product_price_value)"
-                    ></span>
-                    <s x-text="Alpine.store('cart').money(item.product_price_value)"></s>
-                  </div>
-                </template>
-                <template x-if="false">
-                  <span x-text="Alpine.store('cart').money(item.product_price_value)"></span>
-                </template>
-                <template x-if="item.unit_price">
-                  <div class="text-md text-text-100 contrast-more:text-secondary-700">
-                    <span class="sr-only"><?= __('Unit price') ?></span>
-                    <span>
-                      <span x-text="Alpine.store('cart').money(item.unit_price)"></span>
-                      <span aria-hidden="true">/</span>
-                      <span class="sr-only">&nbsp;<?= __('per') ?>&nbsp;</span>
-                      <span>
-                        <template x-if="item.unit_price_measurement.reference_value !== 1">
-                          <span x-text="item.unit_price_measurement.reference_value"></span>
-                        </template>
-                        <span x-text="item.unit_price_measurement.reference_unit"></span>
-                      </span>
-                    </span>
-                  </div>
-                </template>
+                <span x-text="hyva.formatPrice(item.product_price_value)"></span>
               </div>
             </div>
           </div>
