--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
@@ -3,8 +3,10 @@
 use Hyva\Theme\Model\ViewModelRegistry;
 use Satoshi\Theme\ViewModel\Cart\Cart;
 use Hyva\Theme\ViewModel\SvgIcons;
+use Magento\Framework\View\Element\Template;
 
 /** @var ViewModelRegistry $viewModels */
+/** @var Template $block */
 
 /** @var SvgIcons $hyvaicons */
 $hyvaicons = $viewModels->require(SvgIcons::class);
@@ -20,8 +22,7 @@ $isCartPage = $block->getData('isCartPage');
   :class="
   {
     '-translate-y-full': isTotalsExpanded,
-    '-translate-y-[2.5rem] pointer-events-none': !isTotalsExpanded,
-    '-z-10': isNoteExpanded
+    '-translate-y-[2.5rem] pointer-events-none': !isTotalsExpanded
   }
 "
 >
@@ -38,7 +39,7 @@ $isCartPage = $block->getData('isCartPage');
         type="button"
         class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
         :aria-label="isTotalsExpanded ? `<?= __('Collapse') ?>` : `<?= __('Expand') ?>`"
-        @click="isNoteExpanded = false; isTotalsExpanded = !isTotalsExpanded"
+        @click="isTotalsExpanded = !isTotalsExpanded"
         @transitionend.stop
       >
         <span :class="{ 'rotate-180': isTotalsExpanded }">
@@ -74,43 +75,6 @@ $isCartPage = $block->getData('isCartPage');
 </div>
 
 <div
-  class="absolute left-0 right-0 top-0 origin-bottom -translate-y-[2.5rem] text-text-on-fg transition-transform duration-700 motion-reduce:transition-none md:mb-0 md:w-full <?= $isCartPage ? 'md:relative md:translate-y-0 md:pointer-events-auto' : '' ?>"
-  :class="
-    {
-      '-translate-y-full': isNoteExpanded,
-      '-translate-y-[2.5rem] pointer-events-none': !isNoteExpanded,
-      '-z-10': isTotalsExpanded
-    }
-  "
->
-  <div
-    class="pointer-events-none <?= $isCartPage ? 'md:hidden' : '' ?> relative top-0 h-10 bg-gradient-to-t from-[#00000010] via-transparent to-transparent"
-  ></div>
-  <div
-    class="flex flex-col gap-4 bg-white <?= $isCartPage ? 'max-md:px-4 md:pb-4 md:border-t md:border-b md:-mx-4 md:px-4' : 'px-4 pointer-events-none' ?> pt-4 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto"
-    :inert="<?= $isCartPage ? '$store.main.isMobile && ' : '' ?>!isNoteExpanded"
-  >
-    <?php if ($isCartPage) : ?>
-    <h2 class="max-md:hidden"><?= __('Order note') ?></h2>
-    <?php endif; ?>
-    <div class="flex flex-col gap-3 text-text-100 contrast-more:text-secondary-700">
-      <label
-        class="sr-only"
-        for="cart-note"
-      ><?= __('Order special instructions') ?></label>
-      <textarea
-        name="note"
-        form="CartForm"
-        id="cart-note"
-        placeholder="<?= __('Order special instructions') ?>"
-        class="resize-none rounded-sm border px-5 py-4 transition-all duration-1000 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
-      ></textarea>
-    </div>
-    <hr class="divider -mx-4 contrast-more:bg-secondary-700 <?= $isCartPage ? 'md:hidden' : '' ?>">
-  </div>
-</div>
-
-<div
   class="<?= !$isCartPage ? 'pointer-events-none' : '' ?> relative -mx-4 rounded-b-md bg-white px-4 text-text-on-fg transition-opacity duration-300 md:pb-4 max-md:px-3 max-md:pb-5 [.popup\_\_main_&]:pb-3 [.popup\_\_wrapper--visible_&]:pointer-events-auto [.resizable--visible_&]:pointer-events-auto "
   :class="
       {
@@ -142,7 +106,7 @@ $isCartPage = $block->getData('isCartPage');
         type="button"
         class="button button--outline-secondary icon-button icon-button--size-xs <?= $isCartPage ? 'md:hidden' : '' ?>"
         :aria-label="isTotalsExpanded ? `<?= __('Collapse') ?>` : `<?= __('Expand') ?>`"
-        @click="isNoteExpanded = false; isTotalsExpanded = !isTotalsExpanded"
+        @click="isTotalsExpanded = !isTotalsExpanded"
         @transitionend.stop
       >
         <span :class="{ 'rotate-180': isTotalsExpanded }">
@@ -153,30 +117,16 @@ $isCartPage = $block->getData('isCartPage');
   </div>
 
   <div class="mt-4 flex flex-col gap-4 rounded-b-xl bg-fg max-md:px-3">
-    <div class="flex gap-4">
-      <button
-        type="submit"
-        form="CartForm"
-        name="checkout"
-        class="button button--filled-primary h-11 w-full"
-      >
-        <?= __('Secure checkout') ?>
-        <span class="button__icon ml-3">
-          <?= $hyvaicons->renderHtml('lock') ?>
-        </span>
-      </button>
-
-      <button
-        class="button button--outline-primary h-11 <?= $isCartPage ? 'md:hidden' : '' ?>"
-        :class="{ 'bg-primary-50': isNoteExpanded }"
-        @click.prevent="isTotalsExpanded = false; isNoteExpanded = !isNoteExpanded"
-      >
-        <?= __('Add note') ?>
-        <span class="button__icon ml-3">
-          <?= $hyvaicons->renderHtml('note') ?>
-        </span>
-      </button>
-    </div>
+    <a
+      href="<?= $escaper->escapeUrl($block->getUrl('checkout')) ?>"
+      x-element-transition-trigger
+      class="button button--filled-primary h-11 w-full"
+    >
+      <?= __('Secure checkout') ?>
+      <span class="button__icon ml-3">
+        <?= $hyvaicons->renderHtml('lock') ?>
+      </span>
+    </a>
   </div>
   <div class="mt-2 text-md text-text-100 contrast-more:text-secondary-700 max-md:px-3">
     <?= __('Tax included and shipping calculated at checkout') ?>
