--- a/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart-main.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Checkout/templates/cart-main.phtml
@@ -7,7 +7,7 @@ use Satoshi\Theme\Block\Template;
 $title = $block->getLayout()->createBlock('Magento\Theme\Block\Html\Title')->getPageHeading();
 ?>
 
-<div class="md:content-wrapper mt-[72px] h-[calc(100vh-72px)] overflow-y-scroll md:mx-auto">
+<div class="md:content-wrapper mt-[88px] min-h-[calc(100vh-88px)] overflow-y-scroll md:mx-auto">
   <?=
     $template
       ->setData([
