Safely set cart items and update package-lock

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-button.phtml
@@ -15,7 +15,7 @@ $cartItemsCount = $cart->getCartItemsQty();
 <button
   @private-content-loaded.window="(event) => {
     if (!$store.cart.isCartInitialized) {
-      $store.cart.setCartItems(event.detail.data.cart.items);
+      $store.cart.setCartItems(event.detail.data.cart.items || []);
       $store.cart.isCartInitialized = true;
     }
   }"
