SATO-252: Disable checkout button while cart is loading

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-totals.phtml
@@ -112,6 +112,7 @@ $isCartPage = $block->getData('isCartPage');
         href="<?= $escaper->escapeUrl($block->getUrl('checkout')) ?>"
         x-element-transition-trigger
         class="button button--filled-primary h-11 w-full"
+        :class="{ 'button--disabled': $store.cart.isLoading }"
       >
         <?= __('Secure checkout') ?>
         <span class="button__icon ml-3">
