--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -2,6 +2,7 @@
 
 use Hyva\Theme\Model\ViewModelRegistry;
 use Hyva\Theme\ViewModel\SvgIcons;
+use Magento\Checkout\Block\Cart\Coupon;
 use Magento\Framework\Escaper;
 use Satoshi\Theme\Block\Template;
 
@@ -94,5 +95,15 @@ $isCartPage = $block->getData('isCartPage');
         </a>
       </div>
     </template>
+
+    <!-- Apply coupon block -->
+    <?=
+      $block
+        ->getLayout()
+        ->createBlock(Coupon::class)
+        ->setTemplate('Magento_Theme::html/header/cart/coupon.phtml')
+        ->toHtml();
+    ?>
+
   </div>
 </div>
