--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/coupon.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/coupon.phtml
@@ -14,100 +14,101 @@ $hasCouponCode = (bool) strlen($block->getCouponCode() ?: "");
 $couponMessage = $block->getCouponMessage();
 ?>
 
-<div class="col-span-full">
+<div
+  class="col-span-full"
+  id="apply-coupon"
+>
   <hr class="mb-4" />
 
   <!-- Coupon -->
   <div
     class="py-4 rounded-sm border-1"
-    x-data="Accordion(<?= $hasCouponCode ? 'true' : 'false' ?>, 300)"
+    x-data="Accordion(<?= $hasCouponCode || $couponMessage ? 'true' : 'false' ?>, 300)"
   >
-    <div id="apply-coupon">
-      <button
-        class="flex items-center justify-between w-full px-5"
-        x-ref="AccordionButton"
-        :aria-expanded="isExpanded"
-        aria-controls="coupon-panel"
-        aria-labelledby="coupon-label"
-      >
-        <div
-          id="coupon-label"
-          class="flex items-center gap-x-3"
-        >
-          <svg
-            width="16"
-            height="12"
-            viewBox="0 0 16 12"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M14.75 0.75H1.25C1.05109 0.75 0.860322 0.829018 0.71967 0.96967C0.579018 1.11032 0.5 1.30109 0.5 1.5V4.5H1.16975C1.91675 4.5 2.60975 5.01075 2.72975 5.748C2.76631 5.96328 2.75545 6.18394 2.69792 6.39459C2.6404 6.60524 2.53761 6.80079 2.39671 6.96761C2.25581 7.13443 2.08021 7.2685 1.88215 7.36045C1.6841 7.4524 1.46836 7.50003 1.25 7.5H0.5V10.5C0.5 10.6989 0.579018 10.8897 0.71967 11.0303C0.860322 11.171 1.05109 11.25 1.25 11.25H14.75C14.9489 11.25 15.1397 11.171 15.2803 11.0303C15.421 10.8897 15.5 10.6989 15.5 10.5V7.5H14.75C14.5316 7.50003 14.3159 7.4524 14.1178 7.36045C13.9198 7.2685 13.7442 7.13443 13.6033 6.96761C13.4624 6.80079 13.3596 6.60524 13.3021 6.39459C13.2446 6.18394 13.2337 5.96328 13.2703 5.748C13.3903 5.01075 14.0833 4.5 14.8302 4.5H15.5V1.5C15.5 1.30109 15.421 1.11032 15.2803 0.96967C15.1397 0.829018 14.9489 0.75 14.75 0.75ZM5.75 3.75C5.94891 3.75 6.13968 3.82902 6.28033 3.96967C6.42098 4.11032 6.5 4.30109 6.5 4.5C6.5 4.69891 6.42098 4.88968 6.28033 5.03033C6.13968 5.17098 5.94891 5.25 5.75 5.25C5.55109 5.25 5.36032 5.17098 5.21967 5.03033C5.07902 4.88968 5 4.69891 5 4.5C5 4.30109 5.07902 4.11032 5.21967 3.96967C5.36032 3.82902 5.55109 3.75 5.75 3.75ZM5.15 8.55L9.65 2.55L10.85 3.45L6.35 9.45L5.15 8.55ZM10.25 8.25C10.0511 8.25 9.86032 8.17098 9.71967 8.03033C9.57902 7.88968 9.5 7.69891 9.5 7.5C9.5 7.30109 9.57902 7.11032 9.71967 6.96967C9.86032 6.82902 10.0511 6.75 10.25 6.75C10.4489 6.75 10.6397 6.82902 10.7803 6.96967C10.921 7.11032 11 7.30109 11 7.5C11 7.69891 10.921 7.88968 10.7803 8.03033C10.6397 8.17098 10.4489 8.25 10.25 8.25Z"
-              fill="#797979"
-            />
-          </svg>
-          <?= __('Have a promo code?') ?>
-        </div>
-        <div class="button button--outline-secondary icon-button icon-button--size-xs">
-          <span x-ref="AccordionIcon">
-            <?= $hyvaicons->renderHtml('chevron-up') ?>
-          </span>
-        </div>
-      </button>
-
+    <button
+      class="flex items-center justify-between w-full px-5"
+      x-ref="AccordionButton"
+      :aria-expanded="isExpanded"
+      aria-controls="coupon-panel"
+      aria-labelledby="coupon-label"
+    >
       <div
-        x-cloak
-        x-ref="AccordionPanel"
-        class="overflow-hidden text-text-100 contrast-more:text-secondary-700"
-        :class="
+        id="coupon-label"
+        class="flex items-center gap-x-3"
+      >
+        <svg
+          width="16"
+          height="12"
+          viewBox="0 0 16 12"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M14.75 0.75H1.25C1.05109 0.75 0.860322 0.829018 0.71967 0.96967C0.579018 1.11032 0.5 1.30109 0.5 1.5V4.5H1.16975C1.91675 4.5 2.60975 5.01075 2.72975 5.748C2.76631 5.96328 2.75545 6.18394 2.69792 6.39459C2.6404 6.60524 2.53761 6.80079 2.39671 6.96761C2.25581 7.13443 2.08021 7.2685 1.88215 7.36045C1.6841 7.4524 1.46836 7.50003 1.25 7.5H0.5V10.5C0.5 10.6989 0.579018 10.8897 0.71967 11.0303C0.860322 11.171 1.05109 11.25 1.25 11.25H14.75C14.9489 11.25 15.1397 11.171 15.2803 11.0303C15.421 10.8897 15.5 10.6989 15.5 10.5V7.5H14.75C14.5316 7.50003 14.3159 7.4524 14.1178 7.36045C13.9198 7.2685 13.7442 7.13443 13.6033 6.96761C13.4624 6.80079 13.3596 6.60524 13.3021 6.39459C13.2446 6.18394 13.2337 5.96328 13.2703 5.748C13.3903 5.01075 14.0833 4.5 14.8302 4.5H15.5V1.5C15.5 1.30109 15.421 1.11032 15.2803 0.96967C15.1397 0.829018 14.9489 0.75 14.75 0.75ZM5.75 3.75C5.94891 3.75 6.13968 3.82902 6.28033 3.96967C6.42098 4.11032 6.5 4.30109 6.5 4.5C6.5 4.69891 6.42098 4.88968 6.28033 5.03033C6.13968 5.17098 5.94891 5.25 5.75 5.25C5.55109 5.25 5.36032 5.17098 5.21967 5.03033C5.07902 4.88968 5 4.69891 5 4.5C5 4.30109 5.07902 4.11032 5.21967 3.96967C5.36032 3.82902 5.55109 3.75 5.75 3.75ZM5.15 8.55L9.65 2.55L10.85 3.45L6.35 9.45L5.15 8.55ZM10.25 8.25C10.0511 8.25 9.86032 8.17098 9.71967 8.03033C9.57902 7.88968 9.5 7.69891 9.5 7.5C9.5 7.30109 9.57902 7.11032 9.71967 6.96967C9.86032 6.82902 10.0511 6.75 10.25 6.75C10.4489 6.75 10.6397 6.82902 10.7803 6.96967C10.921 7.11032 11 7.30109 11 7.5C11 7.69891 10.921 7.88968 10.7803 8.03033C10.6397 8.17098 10.4489 8.25 10.25 8.25Z"
+            fill="#797979"
+          />
+        </svg>
+        <?= __('Have a promo code?') ?>
+      </div>
+      <div class="button button--outline-secondary icon-button icon-button--size-xs">
+        <span x-ref="AccordionIcon">
+          <?= $hyvaicons->renderHtml('chevron-up') ?>
+        </span>
+      </div>
+    </button>
+
+    <div
+      x-cloak
+      x-ref="AccordionPanel"
+      class="overflow-hidden text-text-100 contrast-more:text-secondary-700"
+      :class="
         {
           'transition-none': $store.main.isReducedMotion,
           'transition': $store.main.isReducedMotion,
         }
       "
-        id="coupon-panel"
-        role="region"
-        aria-labelledby="coupon-label"
+      id="coupon-panel"
+      role="region"
+      aria-labelledby="coupon-label"
+    >
+      <form
+        method="post"
+        action="<?= $escaper->escapeUrl($block->getUrl('checkout/cart/couponPost')) ?>"
+        class="px-5 pb-2 mt-3 text-text-700 flex gap-x-3 items-center"
+        @submit.prevent="$store.cart.applyCoupon($event.target)"
       >
-        <form
-          method="post"
-          action="<?= $escaper->escapeUrl($block->getUrl('checkout/cart/couponPost')) ?>"
-          class="px-5 pb-2 mt-3 text-text-700 flex gap-x-3 items-center"
-          @submit.prevent="$store.cart.applyCoupon($event.target)"
-        >
+        <input
+          type="hidden"
+          name="remove"
+          id="remove-coupon"
+          value="<?= (int) $hasCouponCode ?>"
+        />
+        <div class="w-full">
+          <label
+            for="coupon_code"
+            class="sr-only tracking-widest"
+          ><?= __('Enter promo code') ?></label>
           <input
-            type="hidden"
-            name="remove"
-            id="remove-coupon"
-            value="<?= (int) $hasCouponCode ?>"
-          />
-          <div class="w-full">
-            <label
-              for="coupon_code"
-              class="sr-only tracking-widest"
-            ><?= __('Enter promo code') ?></label>
-            <input
-              type="text"
-              name="coupon_code"
-              placeholder="<?= __('Enter promo code') ?>"
-              id="coupon_code"
-              class="w-full rounded-sm border border-text-50 px-5 py-2.5 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
-              value="<?= $escaper->escapeHtmlAttr($block->getCouponCode()) ?>"
-              <?php if ($hasCouponCode): ?>
-              disabled
-              <?php endif; ?>
-            >
-          </div>
-          <button class="button button--outline-primary">
-            <?= $hasCouponCode ? __('Cancel Coupon') : __('Apply Coupon') ?>
-          </button>
-        </form>
-        <?php if ($couponMessage): ?>
-        <div class="px-5 <?= $couponMessage['status'] === 'error' ? 'text-error' : '' ?>">
-          <?= $couponMessage['message'] ?>
+            type="text"
+            name="coupon_code"
+            placeholder="<?= __('Enter promo code') ?>"
+            id="coupon_code"
+            class="w-full rounded-sm border border-text-50 px-5 py-2.5 contrast-more:border-secondary-700 contrast-more:placeholder-secondary-700"
+            value="<?= $escaper->escapeHtmlAttr($block->getCouponCode()) ?>"
+            <?php if ($hasCouponCode): ?>
+            disabled
+            <?php endif; ?>
+          >
         </div>
-        <?php endif; ?>
+        <button class="button button--outline-primary">
+          <?= $hasCouponCode ? __('Cancel Coupon') : __('Apply Coupon') ?>
+        </button>
+      </form>
+      <?php if ($couponMessage): ?>
+      <div class="px-5 <?= $couponMessage['status'] === 'error' ? 'text-error' : '' ?>">
+        <?= $couponMessage['message'] ?>
       </div>
+      <?php endif; ?>
     </div>
   </div>
 </div>
